# elio

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/themes/default/: theme.toml
examples/: config.toml
examples/themes/amber-dusk/: theme.toml
examples/themes/blush-light/: theme.toml
examples/themes/catppuccin-mocha/: theme.toml
examples/themes/default-light/: theme.toml
examples/themes/navi/: theme.toml
examples/themes/neon-cherry/: theme.toml
examples/themes/terminal-ansi/: theme.toml
examples/themes/tokyo-night/: theme.toml
examples/themes/transparent/: theme.toml
packaging/fedora/: elio.spec
src/: cli.rs  lib.rs  main.rs  path_display.rs  shell.rs
src/app/: directory_counts.rs  drag.rs  git.rs  local_filter.rs  mod.rs  state.rs  types.rs
src/app/actions/: archive.rs  archive_create.rs  directory.rs  goto.rs  mod.rs  navigation.rs
src/app/actions/preview/: cache.rs  mod.rs
src/app/clipboard/: copy.rs  mod.rs  tests.rs
src/app/create/: bulk_rename.rs  editor_bulk_rename.rs  restore.rs  tests.rs  trash.rs
src/app/input/: keyboard.rs  mouse.rs
src/app/input/tests/: archive.rs  browser_wheel.rs  helpers.rs  keyboard.rs  mod.rs  mouse.rs  navigation.rs
src/app/jobs/: metrics.rs  mod.rs  scheduler.rs  tests.rs  types.rs
src/app/jobs/pool/: preview.rs
src/app/jobs/results/: mod.rs
src/app/jobs/tasks/: archive_create.rs  archive_extract.rs  git_status.rs  mod.rs  paste.rs  trash.rs
src/app/open_with/: mod.rs  overlay.rs  tests.rs
src/app/open_with/discovery/: desktop_file.rs  editor.rs  exec.rs  gio.rs  macos.rs  mime.rs  mod.rs  scan.rs
src/app/overlays/: comic.rs  epub.rs
src/app/overlays/images/: format.rs  mod.rs  prepare.rs  present.rs  render.rs  state.rs  tests.rs
src/app/overlays/inline_image/: iterm.rs  mod.rs  protocol.rs  sixel.rs  tmux.rs  window.rs
src/app/overlays/pdf/: present.rs  session.rs
src/app/search/: overlay.rs  tests.rs
src/app/selection/: mod.rs
src/archive/: create.rs  extract.rs  format.rs  mod.rs
src/config/: goto.rs  keys.rs  mod.rs  places.rs
src/config/keys/: defaults.rs  mod.rs  model.rs  parse.rs  validate.rs
src/config/tests/: goto.rs  keys.rs  mod.rs
src/core/: sidebar.rs
src/file_info/: classify.rs  extensions.rs  names.rs
src/file_info/tests/: classify.rs  extensions.rs  mod.rs  names.rs
src/fs/: directory.rs  opener.rs  restore.rs  search.rs
src/fs/directory/: tests.rs
src/fs/places/: devices.rs  linux.rs  resolution.rs  tests.rs
src/fs/restore/: tests.rs
src/fs/search/: tests.rs
src/preview/: dispatch.rs  markdown.rs
src/preview/code/: render.rs
src/preview/code/registry/: tests.rs
src/preview/document/: common.rs
src/preview/tests/: archives.rs  markdown.rs  mod.rs
src/runtime/: mod.rs  session_files.rs  terminal.rs
src/runtime/input/: event.rs  mod.rs  reader.rs
src/runtime/kitty_dnd/: capability.rs  drag_image.rs  event.rs  mod.rs  protocol.rs
src/shell_integration/: install.rs  mod.rs  scripts.rs  tests.rs
src/ui/: chrome.rs  helpers.rs  mod.rs
src/ui/browser/: grid.rs  layout.rs  list.rs  preview.rs  scrollbar.rs  sidebar.rs  tests.rs
src/ui/overlay_manager/: archive_create.rs  archive_password.rs  bulk_rename.rs  create.rs  goto.rs  help.rs  mod.rs  rename.rs  restore.rs  search.rs  trash.rs
tests/: cli.rs  shell_integration_cli.rs  shell_runtime_cli.rs
tests/support/: mod.rs
(+45 files in other folders)
