[package]
name = "elio"
version = "1.9.0"
edition = "2024"
rust-version = "1.95"
description = "Snappy, batteries-included terminal file manager with rich previews, inline images, bulk actions, and trash support."
license = "MIT"
repository = "https://github.com/elio-fm/elio"
readme = "README.md"
keywords = ["terminal", "file-manager", "tui", "preview", "images"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0"
color_quant = "1.1"
dirs = "6"
libc = "0.2"
base64 = "0.22"
cfb = "0.14"
crossterm = "0.29"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
image = { version = "0.25", default-features = false, features = ["gif", "ico", "jpeg", "png", "webp"] }
notify = "8.2"
json5 = "1.3"
lofty = "0.24"
pulldown-cmark = "0.13"
quick-xml = "0.40"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "crossterm_0_29"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = { version = "5.2", default-features = false, features = ["parsing", "regex-onig"] }
tar = "0.4"
yaml_serde = "0.10"
toml = "1.1"
toml_edit = "0.25"
unicode-width = "0.2"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
trash = "5.2.5"
rusqlite = { version = "0.40", features = ["bundled"] }
xz2 = { version = "0.1.7", features = ["static"] }
bzip2 = "0.6.1"
zstd = { version = "0.13.3", default-features = false }
sevenz-rust2 = { version = "0.21.1", default-features = false }

[dev-dependencies]
sevenz-rust2 = { version = "0.21.1", default-features = false, features = ["compress"] }

[build-dependencies]
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "yaml-load", "regex-onig"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[package.metadata.deb]
maintainer = "Miguel Regueiro <67692547+MiguelRegueiro@users.noreply.github.com>"
license-file = ["LICENSE-MIT", "0"]
section = "utils"
priority = "optional"
depends = "$auto, hicolor-icon-theme, desktop-file-utils"
extended-description = """\
elio is a snappy, batteries-included terminal file manager with rich previews, \
inline images, bulk actions, and trash support.
"""
assets = [
    ["target/release/elio", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/elio/README.md", "644"],
    ["CHANGELOG.md", "usr/share/doc/elio/CHANGELOG.md", "644"],
    ["packaging/linux/elio.desktop", "usr/share/applications/elio.desktop", "644"],
    ["packaging/linux/icons/hicolor/48x48/apps/elio.png", "usr/share/icons/hicolor/48x48/apps/elio.png", "644"],
    ["packaging/linux/icons/hicolor/128x128/apps/elio.png", "usr/share/icons/hicolor/128x128/apps/elio.png", "644"],
    ["packaging/linux/icons/hicolor/256x256/apps/elio.png", "usr/share/icons/hicolor/256x256/apps/elio.png", "644"],
    ["packaging/linux/icons/hicolor/512x512/apps/elio.png", "usr/share/icons/hicolor/512x512/apps/elio.png", "644"],
]

[target.'cfg(target_os = "macos")'.dependencies]
# Foundation types for path/string handling, display names, and bundle IDs.
# CoreServices (linked inline in macos.rs) provides the Launch Services C API
# used for app discovery — the same API Finder uses for its "Open With" menu.
objc2-foundation = { version = "0.3", features = ["NSBundle", "NSFileManager", "NSString", "NSURL"] }
